# bwapi

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE.md  README.md  appveyor.yml  build.bat  cppcheck_script.bat
1.16.1/BWAPIBackend_1161/: CMakeLists.txt  svnrev.h
1.16.1/BWAPI_PluginInjector/: CMakeLists.txt
CMake/BWAPI/: CMakeLists.txt
CMake/Client/: CMakeLists.txt
Network/Messages/: CMakeLists.txt  game.proto  message.proto
Network/SFML-2.5.1/: CMakeLists.txt
bwapi/: .gitignore  CMakeLists.txt  CMakeSettings.json  Debug.h  Makefile  bwapi-2005.sln  bwapi-config.in.cmake  bwapi.ini  bwapi.sln  class diagram.uxf  configuration-step.bat  copyToTarget.vbs  doxygen-configuration.dxg  generateStub.bat  notes.txt  revisionUpdate.bat  revisionUpdate.vbs  run_cmake-gui.bat  starcraftver.h  svnrev.h  svnrev.h.in  svnrev_template.h  test.bat
bwapi/AIModuleLoader/: AIModuleLoader.vcproj  AIModuleLoader.vcxproj  AIModuleLoader.vcxproj.filters
bwapi/Archive/: Archive.vcxproj
bwapi/BW/: AbilityPrototype.cpp  BW.vcproj  BW_Unit.h  DLLMain.cpp  Game.cpp  Game.h  Globals.h  Offsets.h  TargetType.h  Types.h  Unit.cpp  Unit.h  UnitPrototype.h  UnitPrototypeDefinitions.h
bwapi/BWAI/: BWAI-2005.vcproj  BWAI.vcproj
bwapi/BWAPI/: AbilityPrototype.h  BWAPI-2005.vcproj  BWAPI.vcproj  BWAPI.vcxproj  BWAPI.vcxproj.filters  CMakeLists.txt  Game.cpp  GameRender.cpp  GameRender.h  Globals.cpp  Player.cpp  Prototype.h  Unit.h  UnitPrototype.h  UnitPrototypeDefinitions.h  Window.cpp  Window.h  index.h  packages.config  pages.h
bwapi/BWAPIClient/: BWAPIClient.vcproj  BWAPIClient.vcxproj  BWAPIClient.vcxproj.filters
bwapi/BWAPICore/: APMCounter.cpp  BWAPICore.vcxproj  BWAPICore.vcxproj.filters  FPSCounter.cpp  FPSCounter.h
bwapi/BWAPICoreTest/: APMCounterTest.cpp  BWAPICoreTest.vcxproj  BWAPICoreTest.vcxproj.filters  FPSCounterTest.cpp  stdafx.cpp
bwapi/BWAPILIB/: BWAPILIB.cbp  BWAPILIB.layout  BWAPILIB.vcproj  BWAPILIB.vcxproj  BWAPILIB.vcxproj.filters  CMakeLists.txt  UnitCommand.cpp  packages.config
bwapi/BWAPILIBTest/: BWAPILIBTest.vcxproj  BWAPILIBTest.vcxproj.filters  helpers.h  positionTest.cpp  specializations.h  stdafx.cpp  unitTypeHelpers.h  unitTypesTest.cpp
bwapi/BWAPITypes/: BWAPITypes.cpp  BuildPosition.cpp  BuildPosition.h  Latency.h  Position.cpp  Position.h  Race.h  StaticGameData.h  TechType.h  UnitCommand.h  UnitCommands.h  UnitSizeType.h  UnitState.h  UnitStruct.h  WalkPosition.cpp  WalkPosition.h  test.cpp
bwapi/BWAPI_ChaosLauncherInjector/: BWAPI_ChaosLauncherInjector-2005.vcproj  BWAPI_ChaosLauncherInjector.vcproj  BWAPI_ChaosLauncherInjector.vcxproj  CMakeLists.txt
bwapi/BWAPI_MPQDraftInjector/: BWAPI_MPQDraftInjector.vcproj  BWAPI_MPQDraftInjector.vcxproj
bwapi/BWAPI_MPQDraftPlugin/: BWAPI_MPQDraftPlugin.vcproj
bwapi/BWAPI_PluginInjector/: BWAPI_PluginInjector.vcxproj  BWAPI_PluginInjector.vcxproj.filters  QDPlugin.def  QDPlugin.h  chaoslauncher.cpp  chaoslauncher.h  common.cpp  common.h  config.cpp  config.h  main.cpp  main.h  mpqdraft.cpp  mpqdraft.h  remotethread.cpp  remotethread.h  valloc.cpp  valloc.h
bwapi/BWAPI_SNPModule/: BWAPI_SNPModule.vcproj
bwapi/BWAgent/: BWAgent.vcproj  dllmain.cpp
bwapi/BWMemoryEdit/: BWMemoryEdit.csproj  CSprite.cs  CUnit.cs  Fasm.NET.xml  Form1.Designer.cs  Form1.cs  Form1.resx  Image.cs  ItemController.cs  MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  Order.cs  Program.cs  PropertyGridExtension.cs  Rect.cs  Sprite.cs  SpriteType.cs  Unit.cs  UnitMovement.cs  UnitType.cs  UnitTypeAttribute.cs  packages.config
bwapi/BWScriptEmulator/: AIControl.cpp  Allies_Watch.cpp  Allies_Watch.h  Attack_Add.cpp  Attack_Add.h  Attack_Clear.cpp  Attack_Clear.h  Attack_Do.cpp  Attack_Do.h  Attack_Prepare.cpp  Attack_Prepare.h  BWScriptEmulator.cpp  BWScriptEmulator.h  BWScriptEmulator.vcproj  BWScriptEmulator.vcxproj  BWScriptEmulator.vcxproj.filters  Build.cpp  Build.h  Build_Bunkers.cpp  Build_Bunkers.h  Call.cpp  Call.h  Capt_Expand.cpp  Capt_Expand.h  Check_Transports.cpp  Check_Transports.h  Clear_Combatdata.cpp  Clear_Combatdata.h  ComputerAI.cpp  ComputerReturn.cpp  Controller.cpp  Controller.h  Create_Unit.cpp  Create_Unit.h  Creep.cpp  Creep.h  Debug.cpp  Debug.h  Default_Build.cpp  Default_Build.h  (+168 more)
bwapi/Bridge/: CommandEntry.h  Constants.h  Doodle.h  DrawShape.h  KnownUnit.h  KnownUnitEntry.h  KnownUnitEventEntry.h  PipeMessage.h  SendTextEntry.h  SharedStuff.h  StaticGameData.h  StaticGameDataStructure.h  Structure.h  UnitCommandEntry.h
bwapi/ChaosLauncherInjector/: ChaosLauncherInjector.vcproj  DLLMain.cpp
bwapi/ConsoleAIModule/: ConsoleAIModule.cpp  ConsoleAIModule.vcproj
bwapi/CopyProjects/: CopyProjects.vcxproj
bwapi/CopyToTarget/: CopyToTarget.vcxproj  main.cpp
bwapi/CreateRemoteThread/: CreateRemoteThread.vcproj  DLLMain.cpp
bwapi/DevAIModule/: DevAIModule.vcproj  DevAIModule.vcxproj  DevAIModule.vcxproj.filters
bwapi/DirectIPServer/: DirectIPServer.vcproj  DirectIPServer.vcxproj  DirectIPServer.vcxproj.filters  main.cpp  main.h
bwapi/Documentation/: Documentation.vcxproj
bwapi/DocumentationGen/: DocumentationGen.vcxproj  DocumentationGen.vcxproj.filters  bullettypes.cpp  colortypes.cpp  damagetypes.cpp  explosiontypes.cpp  gametypes.cpp  helpers.cpp  helpers.h  main.cpp  main.h  orders.cpp  playertypes.cpp  races.cpp  techtypes.cpp  unitcommandtypes.cpp  unittypes.cpp  unittypestestgen.cpp  upgradetypes.cpp  weapontypes.cpp
bwapi/ExampleAIClient/: ExampleAIClient.vcproj  ExampleAIClient.vcxproj  ExampleAIClient.vcxproj.filters
bwapi/ExampleAIModule/: ExampleAIModule.vcproj  ExampleAIModule.vcxproj  ExampleAIModule.vcxproj.filters
bwapi/ExampleTournamentModule/: ExampleTournamentModule.vcproj  ExampleTournamentModule.vcxproj  ExampleTournamentModule.vcxproj.filters
bwapi/Frontend/: .gitignore  CMakeLists.txt
bwapi/Installer/: Installer.vcxproj
bwapi/Interface Packer/: BWAPI1.ini  BWAPI2.ini  Interface Packer.vcproj  clearOutput.cmd  details.ini  pack_BWAPI2.cmd  run.cmd
bwapi/LPIP_Client/: Client.cpp  Client.h  (+4 more)
(+2903 files in other folders)
